# iBoot32Patcher

./: CMakeLists.txt  finders.c  functions.c  iBoot32Patcher  iBoot32Patcher.c  patchers.c
include/: finders.h  functions.h  patchers.h
